sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:6: error: not found: value i
  for (j<- 1 to i){
                ^AlgInsertionSort:7: error: not found: value i
    if (plusPetit(i-j,i)){copie(i,i-j)}}
                  ^AlgInsertionSort:7: error: not found: value i
    if (plusPetit(i-j,i)){copie(i,i-j)}}
                      ^AlgInsertionSort:7: error: not found: value i
    if (plusPetit(i-j,i)){copie(i,i-j)}}
                                ^AlgInsertionSort:7: error: not found: value i
    if (plusPetit(i-j,i)){copie(i,i-j)}}
                                  ^