sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
var v=0
for(i<- 1 to (getNombreValeurs()-1))
  v=getValeur(i)
  for (j<- 1 to i){
    if (plusPetit(i-j,i)){copie(i,i-j)}}
  }
  
